changed entire site, where to starT?

--- a/_posts/2023-05-22-cuce.md
+++ b/_posts/2023-05-22-cuce.md
@@ -1,7 +1,10 @@
 ---
 title: Cüce
-layout: page
+layout: post
+categories: Irklar
 ---
+
+# Cüce
 Cüceler kısa boylu ve iri yapılı insanlardır. Genellikle dağlık bölgelerde veya dağların içerisinde kurdukları büyük şehirlerde yaşarlar ve madencilik, zanaat ve savaşçılık alanlarında yeteneklidirler.
 
 ## Dış görünüş
