--- a/_posts/2023-05-26-tarih.md
+++ b/_posts/2023-05-26-tarih.md
@@ -1,19 +1,26 @@
 ---
 title: Tarih
-layout: page
-categories: tarih
+layout: post
+categories: Tarih
 ---
-_Bu fantastik diyarın geniş dokumasında; unutulmuş çağların yankıları, zamansız efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu bir tarih ortaya çıkar. Kozmosu şekillendiren ilkel güçlerden tutun da büyük medeniyetlerin yükselişine ve çöküşüne kadar bütün bu ansiklopedi eski çağların derinliklerine inerek hayret verici dünyanın özünü şekillendiren zaferleri ve trajedileri gün yüzüne çıkarır._
+# Tarih
+Bu fantastik diyarın geniş dokumasında; unutulmuş çağların yankıları, zamansız efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu bir tarih ortaya çıkar. Kozmosu şekillendiren ilkel güçlerden tutun da büyük medeniyetlerin yükselişine ve çöküşüne kadar bütün bu ansiklopedi eski çağların derinliklerine inerek hayret verici dünyanın özünü şekillendiren zaferleri ve trajedileri gün yüzüne çıkarır.
 
 ## İlk Çağ
 
-### Uzun Akşam Olayı
+İlk Çağın öncesinde bilinen bir tarih yoktur. Bu sebeple de adına "Prehistorik tarih" denir. İlk Çağ, Uzun Akşam ile başlar.
+
+Bu dönemde, hava uzunca bir süre karanlık kalmış, güneşin görünmemesinden dolayı minik bir buzul çağı başlamıştır. Sonrasında ise İlk Göç denen dönem patlak vermiş ve kuzeydeki efsanevi bir kıtadan akınlar başlamıştır. Gelen göçmenlerle doğanın perileri Irşilerin kültürleri karışmış ve Irşilerin Cüce ismini verdikleri yeni bir insan grubu ortaya çıkmıştır.
+
+İlk Çağ, İstila Devri olarak adlandırılan dönemle son bulmuştur. Ejderhaların Orbis kıtasına akın etmesi ile savaşlar ve çatışmalar yaşanmıştır. Bu direnişin izlerinden ise bugünlerin destanına hazırlık olarak bahsedilir.
+
+### Uzun Akşam
 
 Tam tamına _136 yıl_ boyunca sürmüş olan bu tarihi olay büyük bir göç başlatarak Orbis kıtasına olan ilk büyük göçün tetikleyicisi olmuştur. Aynı zamanda İlk Çağ'ın başlangıcı kabul edilir.
 
-[Orbis]({{site.baseurl}}cografya/Orbis.html) tarihinde karanlık ve soğukla örtülenmiş bir bölüm bulunur, adı da Uzun Akşam olarak anılır. Kışın buz etkisinin toprağı sıkılaştırdığı, güneşin gökyüzüne küstüğü ve böylece dünyayı boyun eğmez bir alacakaranlığa sürüklediği bir dönemdi.
+[Orbis]({{site.baseurl}}cografya/Orbis.html) tarihinde karanlık ve soğukla örtülenmiş bir bölüm bulunur, adı da Uzun Akşam olarak anılır. Kışın buz etkisinin toprağı sıkılaştırdığı, güneşin gökyüzüne küstüğü ve böylece dünyayı boyun eğmez bir alacakaranlığa sürüklediği bir dönemdir.
 
-Bu soğuk diyarın katalizörü, [Uçsuz Deniz'in]({{site.baseurl}}wiki/ucsuz-deniz.html) ötesindeki uzak kuzey diyarlarında ortaya çıktı. Çağlar boyunca uyku süren bir dizi devasa volkan, ateşli bir öfkeyle uyandı, göklere yükselen kül ve erimiş kayaları gökkubbeye doğru püskürttü. Gökyüzü külle boğulurken, toprağın üzerine yıllarca dinmeyecek bir kasvet çöktü, güneşin ışıltılı sıcaklığını perdeledi.
+Bu soğuk diyarın katalizörü, Uçsuz Deniz'in ötesindeki uzak kuzey diyarlarında ortaya çıkmıştır. Çağlar boyunca uyku süren bir dizi devasa volkan, ateşli bir öfkeyle uyanır; göklere yükselen kül ve erimiş kayaları gökkubbeye doğru püskürtmüştür. Gökyüzü külle boğulurken, toprağın üzerine yıllarca dinmeyecek bir kasvet çökmüş, güneşin ışıltılı sıcaklığını perdelenmiştir[^1].
 
 Bir zamanların verimli kuzey kıtası, şimdi ıssız bir çorak araziye dönüştü ve sakinlerini acı bir gerçekle yüzleşmeye zorladı. Ekinler, amansız ayazın ağırlığı altında kurudu, kudretli nehirler dondu ve akmayı durdurdu. Hayatta kalmanın zorlaşmasıyla birlikte kuzey sakinleri, yeni bir başlangıç aramak için güneye doğru toplu bir göç başlattı.
 
@@ -80,3 +87,9 @@ Savaş çok uzun yıllar sürmemiş olsa da, bu dönemin bitişi [Neheril'in art
 #### Büyük Bölünme
 
 ## Karanlık Çağ
+
+
+---
+{: data-content="dipnotlar"}
+
+[^1]: Grafai Protenon (Kutsal Yazıtlar) efsanelerinden 
