created simple yet inefficent cat system

--- a/_posts/2023-05-26-tarih.md
+++ b/_posts/2023-05-26-tarih.md
@@ -1,7 +1,7 @@
 ---
 title: Tarih
 layout: post
-tags: Tarih
+categories: Tarih
 desc: Efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu Tarih.
 ---
 # Tarih
