--- a/_posts/2023-05-29-insan.md
+++ b/_posts/2023-05-29-insan.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tags: Toplum Irklar İnsanlar
+categories: Toplum Irklar
 title: İnsanlar
 desc: Oluşumu bile hasımlarının günahları sebebiyle başlayan İnsan, zamanının başlangıcından beri göklere merak duyar, ufuk çizgisini her zaman aşmaya çalışır. Evrenin bir ucundan diğer ucuna kadar her yere adımını atmış, gittiği her yere gelenek ve göreneklerini taşımıştır.
 ---
