--- a/_posts/2023-05-22-cuce.md
+++ b/_posts/2023-05-22-cuce.md
@@ -1,7 +1,7 @@
 ---
 title: Cüce
 layout: post
-categories: Irklar
+categories: Toplum Irklar
 desc: Cüceler; kısa boylu ve iri yapılı, genellikle dağlık bölgelerde veya dağların içerisinde kurdukları büyük şehirlerde yaşarlar.
 ---
 
