created banner system

--- a/_posts/2023-05-22-cuce.md
+++ b/_posts/2023-05-22-cuce.md
@@ -3,6 +3,8 @@ title: Cüce
 layout: post
 categories: Toplum Irklar
 desc: Cüceler; kısa boylu ve iri yapılı, genellikle dağlık bölgelerde veya dağların içerisinde kurdukları büyük şehirlerde yaşarlar.
+tags: Featured
+banner: "/assets/img/cuce_bn.png"
 ---
 
 # Cüce
