--- a/_posts/2023-05-26-tarih.md
+++ b/_posts/2023-05-26-tarih.md
@@ -3,6 +3,8 @@ title: Tarih
 layout: post
 categories: Tarih
 desc: Efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu Tarih.
+tags: Featured
+banner: "/assets/img/tarih_bn.jpg"
 ---
 # Tarih
 Bu fantastik diyarın geniş dokumasında; unutulmuş çağların yankıları, zamansız efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu bir tarih ortaya çıkar. Kozmosu şekillendiren ilkel güçlerden tutun da büyük medeniyetlerin yükselişine ve çöküşüne kadar bütün bu ansiklopedi eski çağların derinliklerine inerek hayret verici dünyanın özünü şekillendiren zaferleri ve trajedileri gün yüzüne çıkarır.
