--- a/_posts/2023-05-28-buyu.md
+++ b/_posts/2023-05-28-buyu.md
@@ -3,6 +3,9 @@ layout: post
 title: Büyü
 categories: Kozmoloji Kavramlar
 desc: Büyü, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir.
+tags: Featured
+banner: "/assets/img/buyu_bn.jpg"
+
 ---
 # Büyü
 **Büyü**, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir. Büyünün temelinde enerji, veya bazen "saf büyü" dediğimiz aura yatar. Saf büyü denmesinin sebebi ise, alt başlıklarda belirtileceği gibi, enerjinin dizginlenmemiş bu halini büyü yapmak için kullanan kimselerin olmasından dolayıdır.
