--- a/_posts/2023-06-01-simya.md
+++ b/_posts/2023-06-01-simya.md
@@ -3,6 +3,7 @@ layout: post
 categories: Kozmoloji Kavramlar
 title: Simya
 desc: Dünyada bulunan materyalleri harmanlayarak içlerindeki gizli enerjiyi açığa çıkarmak veya yeni özellikler oluşturmaktır.
+banner: "/assets/img/simya_bn.jpg"
 ---
 
 # Simya
