edited some posts

--- a/_posts/2023-05-28-buyu.md
+++ b/_posts/2023-05-28-buyu.md
@@ -1,36 +1,22 @@
 ---
 layout: post
-title: Büyü
+title: Orbis evreninde büyü nasıl işler?
 categories: Kozmoloji Kavramlar
 desc: Büyü, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir.
 tags: Featured
 banner: "/assets/img/buyu_bn.jpg"
 
 ---
-# Büyü
-**Büyü**, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir. Büyünün temelinde enerji, veya bazen "saf büyü" dediğimiz aura yatar. Saf büyü denmesinin sebebi ise, alt başlıklarda belirtileceği gibi, enerjinin dizginlenmemiş bu halini büyü yapmak için kullanan kimselerin olmasından dolayıdır.
+# Orbis evreninde büyü nasıl işler?
+**Büyü**, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir. Büyünün temelinde enerji, veya bazen "saf büyü" dediğimiz aura yatar.
 
-Bu enerji farklı alt dallarda dizginlenerek başka "büyü" çeşitlerine ayrılmıştır. Bunlardan [Arkan sanatı]({{site.baseurl}}/kozmoloji/kavramlar/arkan-sanati) kendi içinde pek farklı alana ayrılır.
+Diyarı çevreleyen **enerji**, veya **aura**, aynı zamanda **saf büyü** olarak da isimlendirilen; alemlerin uhrevi özüdür. Yaratılışın sırlarıyla dolu esrarengiz bir cazibeyle kaplıdır. Özünde ilkel kaosun zerreleri ve varoluşumuzun sözsüz ilkeleri barınırken; kendisi ise kozmosu saran anlaşılmaz gizemlerin gayet bir tanığı durumundadır. Bu omnipresent güç, zavallı bir çakıldan cenneti sarsan göksel devasamsılara kadar spektral aurasıyla alemlerin her köşesinde barınır, her nesnenin içerisinde bulunur. O, kendini sınırsız formlarda tezahür eder.
 
-## Diyarı çevreleyen enerji
-[Diyarı çevreleyen **enerji**, veya **aura**, aynı zamanda **saf büyü** olarak da isimlendirilen; alemlerin uhrevi özüdür]({{site.baseurl}}/kozmoloji/kavramlar/saf-enerji). Yaratılışın sırlarıyla dolu esrarengiz bir cazibeyle kaplıdır. Özünde ilkel kaosun zerreleri ve varoluşumuzun sözsüz ilkeleri barınırken; kendisi ise kozmosu saran anlaşılmaz gizemlerin gayet bir tanığı durumundadır. Bu omnipresent güç, zavallı bir çakıldan cenneti sarsan göksel devasamsılara kadar spektral aurasıyla alemlerin her köşesinde barınır, her nesnenin içerisinde bulunur. O, kendini sınırsız formlarda tezahür eder.
+Peki bu saf büyü neye yarar? O, bütün “büyü” adını verdiğimiz gücün temelidir. Orbis’de yer alan bütün mekanizmaların enerji gücüdür. [Kantaşı]({{site.baseurl}}/nesneler/materyaller/kantasi) kullanarak cansız varlıklar hareket ettirilebilir, uçması imkansız araçlar uçurulabilir. Ayrıca şehirlerdeki çoğu ışıklandırma da bu taş ile birlikte gerçekleştirilir.
 
-#### Arkan sanatı
-[**Arkan büyüleri**, büyü aleminin pek cazibeli bir tarafıdır]({{site.baseurl}}/kozmoloji/kavramlar/arkan-sanati). Bu sanatı icra edenler, diyarın içinde bulunan enerjinin kanalize edilmiş halini kullananlardır. Bu esrarengiz dünyada ilerleyenlere, kendi dallarına göre farklı adlar takılsa da, genellikle "büyücü" denir.
+**Büyü**, saf büyüden pek çok kola ayrılır:
 
-Arkan büyüsü, aynı zamanda bir "sanat" olarak da hitap edilir ki, "farklı" bir enerji türü değildir. Kaosun ta kendisi olarak tabir edebileceğimiz enerjinin dizginlenmiş halidir.  Kökeni, bilinmeyen eller tarafından örülmüş Büyükumaşı’dır.
-
-##### Büyükumaşı
-[**Büyükumaşı** veya sadece **kumaş**]({{site.baseurl}}/kozmoloji/kavramlar/buyukumasi); arkan sanatını icra edenler tarafından pek farklı şekillerde anlatılır: Bazı kimseler onu sihirle dokunmuş bir "kumaş" olarak görür. Bilesiniz ki! Büyükumaşının kendi başına bir "sihir" değildir. O, kaosun ta kendisi saf enerjinin dizginlendiği, içinden sakin bir akarsu edasıyla akabileceği bir kanal, veyahut sihirbazlığın sırlarının korkusuzca gözlemlenebildiği bir ağlar silsilesidir. Büyükumaşı’nı kullanmak, arkan sanatının sır perdesini aralayacak anahtarı gerektirir. Bu anahtara sahip olmak da Büyükumaşı’nın nasıl işlediğini kavramaktan geçer. Kumaş ise arkan sanatının, yani dizginlenmiş enerji sanatının gizemini çözmek için bir geçit, veyahutta yol görevi görür.
-
-##### Gölgekumaşı
-[**Gölgekumaşı**]({{site.baseurl}}/kozmoloji/kavramlar/golgekumasi); Büyükumaşı ile tam bir uyum içinde, ancak sinsi bir hayalet gibi kumaşın iplikleri arasında var olan yozlaşmış bir güçtür.  Büyükumaşına “beyaz” denilirse o da “siyahtır”; eğer Büyükumaşı “her şey” ise, Gölgekumaşı “hiçliktir”. O, varolan enerjinin negatif aynasıdır.
-
-#### Kutsal büyü
-[**Kutsal büyü**, ışığın kendisi tarafından sağlanan büyü şeklidir]({{site.baseurl}}/kozmoloji/kavramlar/kutsal-buyu). Ruhbanlar ve paladinler ışıktan aldıkları güç sayesinde büyü kullanırlar. Bahşedilen bu güç, bir tür ilahi, dua veya tapınma yoluyla elde edilir. Kullanıcılar arkan büyücüler gibi büyükumaşını kullanmazlar. Onlar bu gücü tanrıları olan Beçki’den aldıklarına inanırlar.
-
-#### Kanbüyüsü
-[**Kanbüyüsü**, kanı güç kaynağı olarak kullanan bir büyü türüdür]({{site.baseurl}}/kozmoloji/kavramlar/kanbuyusu). Kanbüyüsü uygulayan birine genellikle kanbüyücüsü veya kanmecusîsi denir. Kanbüyüsünün temelinde vampirism yatar, ancak vampir olmadan da kullanılabilir (fakat kullanıcısının yaşam gücünü oldukça etkiler).
-
-#### Karabüyü
-[**Karabüyü**]({{site.baseurl}}/kozmoloji/kavramlar/karabuyu), [Gölgekumaşı’nın](#Gölgekumaşı) uğursuz güçlerini ve nekrotik enerjilerin (canlıların yaşam enerjisinin) manipülasyonu ile kullanılan yasaklanmış kadim bir ekoldür. Karabüyücüler olarak bilinen bu kullanıcılar, ölümün gücünü kullanarak korkunç senaryolara adım atarlar.
+- [Arkan sanatı]({{site.baseurl}}/kozmoloji/kavramlar/arkan-sanati)
+- [Kutsal büyü]({{site.baseurl}}/kozmoloji/kavramlar/kutsal-buyu)
+- [Kanbüyüsü]({{site.baseurl}}/kozmoloji/kavramlar/kanbuyusu)
+- [Karabüyü]({{site.baseurl}}/kozmoloji/kavramlar/karabuyu)
