--- a/_posts/2023-05-22-cuce.md
+++ b/_posts/2023-05-22-cuce.md
@@ -1,5 +1,5 @@
 ---
-title: Cüce
+title: Cüceler kimlerdir?
 layout: post
 categories: Toplum Irklar
 desc: Cüceler; kısa boylu ve iri yapılı, genellikle dağlık bölgelerde veya dağların içerisinde kurdukları büyük şehirlerde yaşarlar.
@@ -7,51 +7,37 @@ tags: Featured
 banner: "/assets/img/cuce_bn.png"
 ---
 
-# Cüce
-Cüceler kısa boylu ve iri yapılı insanlardır. Genellikle dağlık bölgelerde veya dağların içerisinde kurdukları büyük şehirlerde yaşarlar ve madencilik, zanaat ve savaşçılık alanlarında yeteneklidirler.
+# Cüceler kimlerdir?
+Cüceler, karakteristik olarak alçak boylu ve iri yapılı insanlardır. Genellikle dağlık bölgelerde veya dağların içinde kurdukları büyük şehirlerde yaşarlar. Madencilik, zanaat ve savaşçılık alanlarında büyük yeteneklere sahiptirler. İsimlerinden de anlaşılacağı gibi, cüceler genellikle kısa boyludur ve ortalama boyları 1.30 ila 1.45 metre arasında değişir. Boy konusunda eksiklik yaşamalarına rağmen, kütlesel olarak bunu telafi ederler ve ortalama bir insan kadar ağırdırlar. Bir cüce, genellikle 73 ila 100 kilogram arasında değişen bir ağırlığa sahiptir. Erkek cüceler, dişi cücelerden biraz daha uzun ve ağırdır.
 
-## Dış görünüş
-Cüceler, isimlerinden de anlaşılacağı gibi kısa insanlardır ve ortalama olarak bir metre otuz santim, bir metre kırkbeş santim boylarında değişir. Cüceler, boy konusunda eksiklik yaşasalar da kütlesel olarak bunu telafi ederler; ortalama bir insan kadar ağırdırlar. Bir Cüce, genellikle yetmiş üç ila yüz kilogram arasında değişen bir ağırlığa sahiptir. Erkek Cüceler, dişi Cücelerden biraz daha uzun ve ağırdır.
+Erkek cüceler genellikle kellik eğilimindedir ve gür sakallara sahiptir. Bu sakalları, sosyal statülerini sergilemek için kullanabilirler. Sakallar genellikle koyu renklidir. Cüceler arasında doğal olarak kıvrımlı saç bulunmaz; kıvrımlı saç sadece isteyerek şekillendirilerek elde edilebilir.
 
-Erkek Cüceler genellikle kellik eğiliminde olup gür sakallara sahip olurlar ve bunu sosyal statülerini sergilemek için kullanabilirler. Bu sakallar genellikle koyu renklidir. ==Altın cüceler ise sakal bakımına büyük önem verir==, dikkatlice yağlar ve düzenli olarak bakım yaparlar, hatta bazıları parfüm ve süslemeler ekler. Doğal olarak kıvrımlı saç Cüceler arasında yoktur; kıvrımlı saç sadece isteyerek şekil verilerek elde edilebilir.
-Cüceler uzun ömürlüdür, ancak bir [Arysus]({{site.baseurl}}wiki/arysus.html) kadar da değildirler, ve fiziksel olgunluğa thealardan biraz daha geç ulaşırlar. Bir Cüce, geleneksel olarak elli yaşına geldiğinde yetişkin kabul edilir. Cüceler, thealar gibi yaşlanır ancak daha uzun bir süre boyunca canlı ve enerjik kalırlar. Çoğu Cüce, ikinci bir yüzyılını görebilir ve birkaçı dörtyüzüne kadar yaşayabilir. Bir Cüce, elli yaşına kadar genç kabul edilir.
+Cüceler uzun ömürlüdür, ancak Arysus kadar değillerdir ve fiziksel olgunluğa insanlardan biraz daha geç ulaşırlar. Bir cüce, geleneksel olarak 50 yaşına geldiğinde yetişkin kabul edilir. Cüceler, insanlar gibi yaşlanır, ancak daha uzun bir süre boyunca canlı ve enerjik kalırlar. Çoğu cüce, ikinci bir yüzyılı görebilir ve bazıları 400 yaşına kadar yaşayabilir. Bir cüce, elli yaşına kadar genç kabul edilir.
 
-## Karakter
-Cücelerin, dünyanın taşından oyma oldukları iddiası bir yere kadar doğrudur, çünkü Cüceler yaşadıkları taşa benzer birçok özelliği paylaşır. Onlar güçlü, dayanıklı ve güvenilirdir, özellikle yaşlılara karşı kibar ve diğer ırkların birçoğundan çok daha bilgelik sahibidir. Cüceler, geldikleri etnik gruba bakılmaksızın geleneklerine değer verir ve atasal kahramanlarından ilham alır. Cüceler ayrıca inatçı ve alaycı doğalarıyla da tanınırlar; bu özellikler Cüceler arasında çok yaygındır, ancak cesaret ve kararlılık ile dengelenirler.
+### Cücelerin karakteristik özellikleri
+Cücelerin, dünyanın taşından oyma oldukları iddiası bir yere kadar doğru olabilir, çünkü cüceler yaşadıkları taşa benzer birçok özellik paylaşırlar. Güçlü, dayanıklı ve güvenilir olmalarıyla bilinirler. Özellikle yaşlılara karşı kibar davranır ve diğer ırklardan daha fazla bilgelik sahibidirler. Cüceler, etnik kökenlerine bakılmaksızın geleneklerine değer verirler ve atasal kahramanlarından ilham alırlar. Ayrıca inatçı ve alaycı doğalarıyla da tanınırlar. Bu özellikler cüceler arasında oldukça yaygındır, ancak cesaret ve kararlılıkla dengelenirler.
 
-Bir Cücein dostluğunun kazanılması zor olsa da bir kez kazanıldığında asla bitmez. Doğası gereği somurtkan ve kuşkulu olan bu halk, başkalarına güvenmekte yavaş kalır. Özellikle aileleri dışındakilere. Yabancılar iyi niyetlerini birçok kez kanıtlamadıkçaonlar hakkında en kötüsünü çok kolayca düşünebilirler. Bu güven bir kez kazanıldığında, Cüce dostlarına bağlı kalır; ancak ihanetlerin en küçük olanlarını bile, en zalim intikam istekleriyle karşılarlar.
+Cücelerin dostluğunu kazanmak zor olsa da bir kez kazanıldığında sonsuza kadar devam eder. Doğaları gereği somurtkan ve kuşkulu olan bu halk, başkalarına güvenmekte yavaş kalır, özellikle aile dışındakilere. Yabancılar, iyi niyetlerini birçok kez kanıtlamadıkça, cüceler hakkında en kötü düşüncelere kolayca kapılabilirler. Ancak bir kez güvenleri kazanıldığında, cüceler dostlarına bağlı kalırlar. İhanetin en küçüğünü bile en acımasız intikam duygularıyla karşılarlar.
 
-Cüceler dikkatli ve düşüncelidir, diğerlerini bazen çabuk hareket eden veya düşüncesiz olarak görürler. Onlar, her şeyi özenle ve inatçı bir kararlılıkla yapar, pervasız veya korkak davranışlar onlar için alışılmadık olan davranışlardır. Bununla birlikte, öfkeye veya hırsa kolayca kapılabilirler, ki bu onların en yaygın kusurlarıdır.
+Cüceler dikkatli ve düşünceli bir yapıya sahiptirler ve bazen diğer insanları hızlı veya düşüncesizce hareket eden kişiler olarak görürler. Her şeyi özenle ve inatçı bir kararlılıkla yaparlar ve pervasız veya korkak davranışlar onlar için alışılmamıştır. Ancak, öfke veya hırs duygularına kolayca kapılabilirler, bu da onların en yaygın kusurlarından biridir.
 
-Vatanlarını terk ederek maceracı olmaya karar verenlerin birçok nedeni vardır. Bir Cüce, sadece onlara has güzelliklere olan sevgisi sebebiyle oluşan basit bir hırs tarafından motive olabilir. Bununla birlikte, bir Cüce, başkaları için doğru olanı yapma dürtüsüyle (özellikle ait oldukları klanları için) veya heyecan arzusuyla motive olabilir, çünkü onlar heyecan aramaktan sıkılmazlar.
+Vatanlarını terk ederek maceracı bir yaşama karar verenlerin birçok nedeni vardır. Bir cüce, sadece kendilerine özgü güzelliklere duydukları sevgi gibi basit bir hırsla motive olabilir. Ancak, bir cüce, başkaları için doğru olanı yapma içgüdüsüyle (özellikle klanları için) veya heyecan arayışıyla da motive olabilir, çünkü heyecan aramaktan sıkılmazlar.
 
-## Toplum
-Cüceler güçlü bir dayanışma kültürüne sahiptirler. Klanlar halinde yaşarlar ve klan liderleri tarafından yönetilirler. Toplumları, madencilik, taş işçiliği ve zanaatkârlık üzerine kuruludur. İş bölümü yaparak, her bireyin kendine özgü bir rolü vardır. Çalışkanlık, sadakat ve adalet Cüce toplumlarının temel değerleridir.
+### Cüce kültürü ve gelenekleri
+Cüceler, dayanışma kültürüne sahip bir toplumdur. Klanlar halinde yaşarlar ve klan liderleri tarafından yönetilirler. Toplumları, madencilik, taş işçiliği ve zanaatkârlık üzerine kuruludur. Her bireyin kendine özgü bir rolü vardır. Çalışkanlık, sadakat ve adalet, cüce toplumunun temel değerleridir.
 
-Cüce toplumu geleneksel olarak birçok klandan oluşur. Her klanın kendine has bir sembolü vardır, çoğunlukla değerli taşlar sembol olarak kullanılsa da bazı klanlar kılıç veya kalkan gibi objelerle de ilişkilendirilebilir. Bazı klanlar aynı taşı sembol olarak kullanabilir, burada da taşın kesilme şekli ile ayırt edilirler. Bu taşlar genellikle klanın topraklarında yaygın olan taşlar olur. Klan üyelerinin zırhlarında veya silah saplarında kullanılırlar. Cücelerin kapsamlı kayıtlar tutma alışkanlığından dolayı, herhangi iki klanın aynı taşı ve kesimi taşıması nadirdir. Onlar, ayrıca her bebeğin doğumu için ona özel bıçak döverler ve bu bıçak, yeni doğanın göbek bağını kesmek için kullanılır. Dövülen bıçak ergenlik çağına geldiğinde ona verilir ve bıçağı iyi durumda tutma görevi ona yüklenir. Cüceler evlendiklerinde, partnerlerinin klanının sembolünü taşıyan (özellikle taş semböllü olan) kılıflar oluştururlar.
+Cüce toplumu birçok klandan oluşur. Her klanın kendine özgü sembolü vardır, genellikle değerli taşlar sembol olarak kullanılır. Ayrıca bazı klanlar kılıç veya kalkan gibi objelerle ilişkilendirilebilir. Klan üyeleri, klanın sembol taşlarını kullanarak zırhlarında veya silah saplarında süslemeler yaparlar. Cüceler ayrıca her bebeğin doğumunda özel bir bıçak döverler ve bu bıçak, yeni doğanın göbek bağını kesmek için kullanılır. Bıçak, ergenlik çağına geldiğinde çocuğa verilir ve bıçağı iyi durumda tutma görevi ona yüklenir. Evlendiklerinde, cüceler partnerlerinin klan sembolünü taşıyan kılıflar yaparlar.
 
-Cüceler, aile üyeleri ve arkadaşlar arasındaki bağları son derece değerli bulur ve sıkı sıkıya örülmüş klanlardan oluşurlar. Onlar, özellikle büyüklerine saygı duyar, onlardan sağlam liderlik ve deneyimin bilgeliğini beklerler, ayrıca atalarına ve tarihsel kahramanlarına, veya klan kurucularına da saygı gösterirler. Bu fikir diğer insanlarla olan ilişkilerine de yansır. Cüceler kendilerinden olmayan insanların yaşlılarına bile saygılıdır.
+Cüceler, aile ve arkadaşlık bağlarına büyük önem verirler. Yaşlılara saygı gösterirler ve liderlik ve deneyim bilgeliğini onlardan beklerler. Atalarına ve klan kurucularına da saygı duyarlar. Ayrıca diğer insanlarla ilişkilerinde de saygılıdırlar, hatta kendi topluluklarına ait olmayan insanların yaşlılarına bile saygı gösterirler.
 
-### Dil
-Taşdili (bazıları bunu Cevherdili olarak da çevirir) olarak bilinen cüce dili; onların yer ve taşla derin bir bağı olduğunu yansıtan ritmik ve sağlam bir özelliğe sahiptir. Cüce toplumunun sağlam temellerini hatırlatan bir niteliktedir. Güçlü ve vurgulu bir doğası olan boğumlu sesler ve ünsüzlerle zengindir. Dil, cüce kültürünün dayanıklı doğası; zanaat ve taş işçiliğine olan yakınlığıyla uyumlu bir şekilde ağırlık ve ciddiyet hissi taşır. Cücelerin ayrıntılara dikkat etme ve zanaatlarında titizlikle çalışma özelliklerine uygun olarak, bu dil kesinlik ve doğruluk taşır.
+Cüceler, Taşdili olarak da bilinen bir dil kullanır. Bu dil, ritmik ve sağlam bir özellik taşır ve cücelerin yer ve taşla olan bağını yansıtır. Cüce toplumunun sağlam temellerini hatırlatır.
 
-### Cüceşehir
+Cüceler genellikle diğer ırklara karşı temkinli bir tutum sergiler. İlk başta yabancılara mesafeli olabilirler, ancak adaletli ve dürüst bir ilişki kurulduğunda saygı gösterirler. Dostane ilişkiler kurabildikleri diğer ırklarla ticaret yapma ve işbirliği yapma eğilimindedirler.
 
-## Özellikleri
-Taşdilinin kelime dağarcığı; jeoloji, mineraller, metaller ve zanaatle ilgili terimlerle zengindir. Cücelerin zanaatlarında derin bilgi ve ustalıklarını yansıtan birçok teknik terim ve özelleşmiş kelimeyi kapsar. Aynı zamanda onur, sadakat ve aile ve klan bağlarının güçlü olduğu kavramları ileten kelimeleri içerir, bunlar morgrimmer kültüründe çok değerlidir.
+[Cüceşehirleri]({{site.baseurl}}/kozmoloji/kavramlar/cucesehirleri) özel bir hükümet sistemiyle yönetilir. Yönetimde benzersiz işlevleri olan üç ana hanedanlık bulunur ve hepsinin görevleri farklıdır.
 
-Yazılı formda Taşdili, taş veya metal üzerine oyulmuş karmaşık kazıma şeklindeki keskin ve kalın çizgilerle karakterize edilen benzersiz bir yazı sistemine sahiptir. Bu dil yazı esnasında runik sembolleri kullanılır ve yazılı metinlere anlam katmada ve gizli mesajlar iletmekte oldukça kullanışlıdır.
-
-### Diğer ırklara karşı tutumlar
-Cüce genellikle diğer ırklara karşı temkinli bir tutum sergilerler. Başlangıçta yabancılara karşı mesafeli olabilirler, ancak adaletli ve dürüst bir ilişki kurulduğunda saygı gösterirler. Dostane ilişkiler kurabildikleri diğer ırklarla ticaret yapma ve işbirliği yapma eğilimindedirler.
-
-## Etnik-grupları
 Cücelerın pek çok farklı etnik grubu vardır. Bu gruplardan bazıları varoluşlarına klanlar olarak başlamış, yıllar sonrasında farklı etnik yapılara bölünmüşlerdir.
 
-- Akşemşah: _Nanmoth'un cüceleri_ olarak da bilinen, [Nanmoth vadisinin]({{site.baseurl}}wiki/nanmoth-vadisi.html) karanlık ormanlarında, ve onun derinliklerinde yaşayan kara benizli cüce etnik grubudur. Soyları, eski zamanlarda aynı isimle kurulmuş "Akşemşah" klanına dayanır.
-
-- Kerdorun: _Orod Mir'in Halkı_ olarak bilinirler. Ateş anlamına gelen "Ker" ile uzun sakal anlamına gelen "Dorun" kelimelerinin birleşimlerinden oluşur. Bu halk [Orod Mir'in]({{site.baseurl}}wiki/orod-mir.html) muhteşem cüceşehirlerinde yaşar, birbirinden güçlü silahlar, birbirinden güzel mücevherler ve taş eserleri yaratmalarıyla meşhurdurlar. Zanaatkârlıkları kimseyle boy ölçüşemez.
-
-- Taşmühür: _İrfanı geniş millet_ olarak da bilinen Taşmühürler marifetlerini büyüyle gösterir. Tarihten beri gelen, büyüye olan alışkanlıkları onları bu konuda hısımlarından ayırır. Doğal olarak büyüye yatkınlıkları vardır.
-
-## Tarih
+- [Akşemşah]({{site.baseurl}}/toplum/irklar/aksemsah-cuceleri)
+- [Kerdorun]({{site.baseurl}}/toplum/irklar/kerdorun-cuceleri)
+- [Taşmühür]({{site.baseurl}}/toplum/irklar/tasmuhur-cuceleri)
