changed page.title section of articles

--- a/_posts/2023-05-22-cuce.md
+++ b/_posts/2023-05-22-cuce.md
@@ -7,7 +7,7 @@ tags: Featured
 banner: "/assets/img/cuce_bn.png"
 ---
 
-# Cüceler kimlerdir?
+# {{page.title}}
 Cüceler, karakteristik olarak alçak boylu ve iri yapılı insanlardır. Genellikle dağlık bölgelerde veya dağların içinde kurdukları büyük şehirlerde yaşarlar. Madencilik, zanaat ve savaşçılık alanlarında büyük yeteneklere sahiptirler. İsimlerinden de anlaşılacağı gibi, cüceler genellikle kısa boyludur ve ortalama boyları 1.30 ila 1.45 metre arasında değişir. Boy konusunda eksiklik yaşamalarına rağmen, kütlesel olarak bunu telafi ederler ve ortalama bir insan kadar ağırdırlar. Bir cüce, genellikle 73 ila 100 kilogram arasında değişen bir ağırlığa sahiptir. Erkek cüceler, dişi cücelerden biraz daha uzun ve ağırdır.
 
 Erkek cüceler genellikle kellik eğilimindedir ve gür sakallara sahiptir. Bu sakalları, sosyal statülerini sergilemek için kullanabilirler. Sakallar genellikle koyu renklidir. Cüceler arasında doğal olarak kıvrımlı saç bulunmaz; kıvrımlı saç sadece isteyerek şekillendirilerek elde edilebilir.
