--- a/_posts/2023-05-28-buyu.md
+++ b/_posts/2023-05-28-buyu.md
@@ -7,7 +7,7 @@ tags: Featured
 banner: "/assets/img/buyu_bn.jpg"
 
 ---
-# Orbis evreninde büyü nasıl işler?
+# {{page.title}}
 **Büyü**, bireylerin istenen sonuçları elde etmek için dünyanın enerjisini manipüle etme yeteneğine denir. Büyünün temelinde enerji, veya bazen "saf büyü" dediğimiz aura yatar.
 
 Diyarı çevreleyen **enerji**, veya **aura**, aynı zamanda **saf büyü** olarak da isimlendirilen; alemlerin uhrevi özüdür. Yaratılışın sırlarıyla dolu esrarengiz bir cazibeyle kaplıdır. Özünde ilkel kaosun zerreleri ve varoluşumuzun sözsüz ilkeleri barınırken; kendisi ise kozmosu saran anlaşılmaz gizemlerin gayet bir tanığı durumundadır. Bu omnipresent güç, zavallı bir çakıldan cenneti sarsan göksel devasamsılara kadar spektral aurasıyla alemlerin her köşesinde barınır, her nesnenin içerisinde bulunur. O, kendini sınırsız formlarda tezahür eder.
