--- a/_posts/2023-06-01-falcilar.md
+++ b/_posts/2023-06-01-falcilar.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 categories: Toplum Mertebeler
-title: Falcılar
+title: Güçlü varlıkların diplomatları falcılar
 desc: Falcılar, Karaderinlik’den gelen güçlü varlıkların ve hatta Mürver Olanlar’ın himayesi altına girerek gizli güçlere erişim sağlarlar.
 ---
 
-# Falcılar
+# {{page.title}}
 **Falcılar**, Karaderinlik’den gelen güçlü varlıkların ve hatta Mürver Olanlar’ın himayesi altına girerek gizli güçlere erişim sağlarlar. Bu hamilik, falcılara, başka türlü kendilerine kapalı olacak olan gizli kudretin anahtarı olur. Falcıların “büyülerine”, uzun süreli eğitim veya doğal yetenek yerine irade gücüyle salınan **çağrı** veya asıl ismiyle **niyaz** da denir. Bu çağrılar bir efsuncunun veya büyücününkinden dah güçlü ve ölümcül olma eğilimindedir. Falcılar savaştıklar kişileri lanetleme konusunda pek hünerlidir.
 
 Bir falcının nitelikleri, büyük ölçüde himayesine girdiği varlığa göre belirlenir: Pek çok falcı karanlık güçlerle anlaşma yaparken, bazıları ise Elysium’un müşfik varlıklarıyla anlaşma yapmayı tercih eder. Göksel varlıkların himayesinde olan falcılar genellikle dünyayı Öreklerden veya diğer şeytani varlıklardan arındırmaya yönlendirilir.
