--- a/_posts/2023-06-01-runler.md
+++ b/_posts/2023-06-01-runler.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 categories: Kozmoloji Kavramlar
-title: Rünler
+title: Rünler nelerdir?
 desc: Aynı parşömenlere yazarak büyü işlemeye benzeyen rün taşları (bu işleme de “rünleme” denir), derinlerde yaşayan Cüceler tarafından üretilmiştir.
 ---
 
-# Rünler
+# {{page.title}}
 Aynı parşömenlere yazarak büyü işlemeye benzeyen rün taşları (bu işleme de “rünleme” denir), derinlerde yaşayan Cüceler tarafından üretilmiştir. Rünler, cücelerin Taşdili’nde yazılarak bir yüzeye boyanır, çizilir veya oyulur; böylece istenilen nitelikte bir büyü ortaya çıkar. Yüzeye doldurulan enerji dokunulduğunda tetiklenerek enerji açığa çıkar ve büyü gerçekleşir.
