--- a/_posts/2023-06-01-simya.md
+++ b/_posts/2023-06-01-simya.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 categories: Kozmoloji Kavramlar
-title: Simya
+title: Orbis üzerinde simyanın işlevi
 desc: Dünyada bulunan materyalleri harmanlayarak içlerindeki gizli enerjiyi açığa çıkarmak veya yeni özellikler oluşturmaktır.
 banner: "/assets/img/simya_bn.jpg"
 ---
 
-# Simya
+# {{page.title}}
 **Simya**, dünyada bulunan materyalleri harmanlayarak içlerindeki gizli enerjiyi açığa çıkarmak veya yeni özellikler oluşturmaktır. Simyacı olarak bilinen simya zanaatkârları, güçlü iksirler ve katı maddeler üretmek konusunda ustadırlar.
