--- a/_posts/2023-06-02-tasdili.md
+++ b/_posts/2023-06-02-tasdili.md
@@ -6,7 +6,7 @@ desc: Güçlü ve vurgulu bir doğası olan boğumlu sesler ve ünsüzlerle zeng
 ---
 
 # {{page.title}}
-Taşdili (bazıları bunu Cevherdili olarak da çevirir) olarak bilinen cüce dili; onların yer ve taşla derin bir bağı olduğunu yansıtan ritmik ve sağlam bir özelliğe sahiptir. Cüce toplumunun sağlam temellerini hatırlatan bir niteliktedir. Güçlü ve vurgulu bir doğası olan boğumlu sesler ve ünsüzlerle zengindir. Dil, cüce kültürünün dayanıklı doğası; zanaat ve taş işçiliğine olan yakınlığıyla uyumlu bir şekilde ağırlık ve ciddiyet hissi taşır. Cücelerin ayrıntılara dikkat etme ve zanaatlarında titizlikle çalışma özelliklerine uygun olarak, bu dil kesinlik ve doğruluk taşır.
+**Taşdili** (bazıları bunu Cevherdili olarak da çevirir) olarak bilinen [cüce dili]({{site.baseurl}}/toplum/irklar/cuceler); onların yer ve taşla derin bir bağı olduğunu yansıtan ritmik ve sağlam bir özelliğe sahiptir. Cüce toplumunun sağlam temellerini hatırlatan bir niteliktedir. Güçlü ve vurgulu bir doğası olan boğumlu sesler ve ünsüzlerle zengindir. Dil, cüce kültürünün dayanıklı doğası; zanaat ve taş işçiliğine olan yakınlığıyla uyumlu bir şekilde ağırlık ve ciddiyet hissi taşır. Cücelerin ayrıntılara dikkat etme ve zanaatlarında titizlikle çalışma özelliklerine uygun olarak, bu dil kesinlik ve doğruluk taşır.
 
 Taşdilinin kelime dağarcığı; jeoloji, mineraller, metaller ve zanaatle ilgili terimlerle zengindir. Cücelerin zanaatlarında derin bilgi ve ustalıklarını yansıtan birçok teknik terim ve özelleşmiş kelimeyi kapsar. Aynı zamanda onur, sadakat ve aile ve klan bağlarının güçlü olduğu kavramları ileten kelimeleri içerir, bunlar morgrimmer kültüründe çok değerlidir.
 
